Fix scrollbar style

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ body::-webkit-scrollbar {
   width: 6px;
   background-color: transparent;
   background: #000;
-  border-radius: 5px;
 }
 
 body::-webkit-scrollbar-thumb {
